Bug ID: 68113
* Support for hiding verticals by not showing links to them
* Styling changes to support sub-categories


git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@13556 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/widgets/verticalhubheader.css
+++ b/htdocs/stc/widgets/verticalhubheader.css
@@ -1,5 +1,15 @@
-h1.logged-in, h1.logged-out {
+h1.logged-in, h1.logged-out, h1 {
     margin-bottom: 0 !important;
+}
+
+.appwidget-verticalhubheader a {
+    color: #00c !important;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.appwidget-verticalhubheader a:hover {
+    text-decoration: underline;
 }
 
 .appwidget-verticalhubheader .title-box {
@@ -18,6 +28,5 @@ h1.logged-in, h1.logged-out {
 
 .appwidget-verticalhubheader .children,
 .appwidget-verticalhubheader .siblings {
-    margin-top: 0;
-    font-weight: bold;
+    margin-top: 5px;
 }
