--- a/htdocs/stc/widgets/verticalsummary.css
+++ b/htdocs/stc/widgets/verticalsummary.css
@@ -13,15 +13,11 @@
     font-family: Arial;
     font-weight: bold;
     background: #d6e6f5 url(/img/corner-f6f6f6.gif) no-repeat 0 0;
-    margin: 0 0 8px 0;
+    margin: 0;
     padding: 5px 8px;
     color: #222;
     text-transform: uppercase;
     position: relative;
-}
-
-.appwidget-verticalsummary h2.vertsummary-nosubcats {
-    margin-bottom: 0;
 }
 
 .appwidget-verticalsummary h2 a span.vertsummary-verticalname {
@@ -36,7 +32,7 @@
 
 .appwidget-verticalsummary .vertsummary-subcats {
     font-size: 11px;
-    margin: 0 0 10px 0;
+    margin: 5px 0 5px 5px;
 }
 
 .appwidget-verticalsummary hr {
